updated cleaning data

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -744,6 +744,368 @@
     "\n",
     "print(dataframe) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas Read JSON\n",
+    "Big data sets are often stored, or extracted as JSON.\n",
+    "\n",
+    "JSON is plain text, but has the format of an object, and is well known in the world of programming, including Pandas.\n",
+    "\n",
+    "In our examples we will be using a JSON file called 'data.json'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the JSON file into a DataFrame:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# df = pd.read_json('data.json')\n",
+    "\n",
+    "# print(df.to_string()) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JSON = Python Dictionary\n",
+    "\n",
+    "JSON objects have the same format as Python dictionaries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example\n",
+    "Load a Python Dictionary into a DataFrame:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Duration  Pulse  Maxpulse Calories\n",
+      "0        60    110       130      409\n",
+      "1        60    117       145      479\n",
+      "2        60    103       135         \n",
+      "3        45    109       175      282\n",
+      "4        45    117       148      406\n",
+      "5        60    102       127      300\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "  \"Duration\":{\n",
+    "    \"0\":60,\n",
+    "    \"1\":60,\n",
+    "    \"2\":60,\n",
+    "    \"3\":45,\n",
+    "    \"4\":45,\n",
+    "    \"5\":60\n",
+    "  },\n",
+    "  \"Pulse\":{\n",
+    "    \"0\":110,\n",
+    "    \"1\":117,\n",
+    "    \"2\":103,\n",
+    "    \"3\":109,\n",
+    "    \"4\":117,\n",
+    "    \"5\":102\n",
+    "  },\n",
+    "  \"Maxpulse\":{\n",
+    "    \"0\":130,\n",
+    "    \"1\":145,\n",
+    "    \"2\":135,\n",
+    "    \"3\":175,\n",
+    "    \"4\":148,\n",
+    "    \"5\":127\n",
+    "  },\n",
+    "  \"Calories\":{\n",
+    "    \"0\":409,\n",
+    "    \"1\":479,\n",
+    "    \"2\":\"\",\n",
+    "    \"3\":282,\n",
+    "    \"4\":406,\n",
+    "    \"5\":300\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(df) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas - Analyzing DataFrames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viewing the Data\n",
+    "One of the most used method for getting a quick overview of the DataFrame, is the head() method.\n",
+    "\n",
+    "The head() method returns the headers and a specified number of rows, starting from the top."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Pulse</th>\n",
+       "      <th>Maxpulse</th>\n",
+       "      <th>Calories</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>110</td>\n",
+       "      <td>130</td>\n",
+       "      <td>409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60</td>\n",
+       "      <td>117</td>\n",
+       "      <td>145</td>\n",
+       "      <td>479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>103</td>\n",
+       "      <td>135</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>109</td>\n",
+       "      <td>175</td>\n",
+       "      <td>282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45</td>\n",
+       "      <td>117</td>\n",
+       "      <td>148</td>\n",
+       "      <td>406</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Duration  Pulse  Maxpulse Calories\n",
+       "0        60    110       130      409\n",
+       "1        60    117       145      479\n",
+       "2        60    103       135         \n",
+       "3        45    109       175      282\n",
+       "4        45    117       148      406"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n",
+    "# df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is also a tail() method for viewing the last rows of the DataFrame.\n",
+    "\n",
+    "The tail() method returns the headers and a specified number of rows, starting from the bottom."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Pulse</th>\n",
+       "      <th>Maxpulse</th>\n",
+       "      <th>Calories</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45</td>\n",
+       "      <td>117</td>\n",
+       "      <td>148</td>\n",
+       "      <td>406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60</td>\n",
+       "      <td>102</td>\n",
+       "      <td>127</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Duration  Pulse  Maxpulse Calories\n",
+       "4        45    117       148      406\n",
+       "5        60    102       127      300"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Info About the Data\n",
+    "The DataFrames object has a method called info(), that gives you more information about the data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 169 entries, 0 to 168\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Duration  169 non-null    int64  \n",
+      " 1   Pulse     169 non-null    int64  \n",
+      " 2   Maxpulse  169 non-null    int64  \n",
+      " 3   Calories  164 non-null    float64\n",
+      "dtypes: float64(1), int64(3)\n",
+      "memory usage: 5.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RangeIndex: 169 entries, 0 to 168\n",
+    "\n",
+    "Data columns (total 4 columns)\n",
+    "\n",
+    "here we have 169 rows from 0 to 168 and 4 columns \n",
+    "\n",
+    "Null Values\n",
+    "The info() method also tells us how many Non-Null values there are present in each column, and in our data set it seems like there are 164 of 169 Non-Null values in the \"Calories\" column.\n",
+    "\n",
+    "Which means that there are 5 rows with no value at all, in the \"Calories\" column, for whatever reason.\n",
+    "\n",
+    "Empty values, or Null values, can be bad when analyzing data, and you should consider removing rows with empty values. This is a step towards what is called cleaning data, and you will learn more about that in the next chapters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas - Cleaning Data\n",
+    "\n",
+    "Data Cleaning\n",
+    "Data cleaning means fixing bad data in your data set.\n",
+    "\n",
+    "Bad data could be:\n",
+    "\n",
+    "- Empty cells\n",
+    "- Data in wrong format\n",
+    "- Wrong data\n",
+    "- Duplicates"
+   ]
   }
  ],
  "metadata": {
